hphp/test/slow/traits/requireclass/requireclass_conflict_01d.bad.php.expectf
Fatal error: Conflicting requirements for 'C' in %s/requireclass_conflict_01d.bad.php on line 6
